--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,17 @@
-asn1crypto==0.24.0
-certifi==2019.11.28
 chardet==3.0.4
+certifi
+cffi==1.12.2
 Click==7.0
-cryptography==2.6.1
 elasticsearch==7.1.0
 elasticsearch-dsl==7.1.0
 entrypoints==0.3
-findimports==1.5.2
 Flask==1.1.1
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 jsons==1.1.1
-keyring==17.1.1
-keyrings.alt==3.1.1
 MarkupSafe==1.1.1
-numpy==1.17.4
-pandas==0.25.3
-pycrypto==2.6.1
-python-dateutil==2.8.1
-pytz==2019.3
-pyxdg==0.26
 requests==2.22.0
-SecretStorage==2.3.1
 six==1.12.0
-typish==1.3.1
 urllib3==1.25.7
 Werkzeug==0.16.0
