--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,17 @@ services:
       - pplbase
     environment:
       - discovery.type=single-node
+    volumes:
+      - /c/dockerdisks:/usr/share/elasticsearch/data
 
 networks:
   pplbase:
     driver: bridge
 
+
+
 # WSL en docker aantekeningen, codepage errors los je op door:
 # - git-bash te gebruiken (mingw)
-# in de terminal waar het mis gaat (Dos/Powershell) "chcp 932" te gebruiken
+# of:
+# - in de terminal waar het mis gaat (Dos/Powershell) "chcp 850" te gebruiken
 
